chore: export coverage results in charm unit tests

--- a/server/charm/tox.ini
+++ b/server/charm/tox.ini
@@ -59,6 +59,7 @@ commands =
                  {[vars]tests_path}/unit \
                  {posargs}
     coverage report
+    coverage xml
 
 [testenv:integration]
 description = Run integration tests
