--- a/.github/workflows/test_server.yaml
+++ b/.github/workflows/test_server.yaml
@@ -18,6 +18,25 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  check-libs:
+    if: github.event_name == 'pull_request'
+    name: Check Charm Libraries
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write # necessary to add library status label
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+        with:
+          persist-credentials: false
+      - name: Check libraries
+        uses: canonical/charming-actions/check-libraries@2.7.0
+        with:
+          charm-path: server/charm
+          credentials: ${{ secrets.CHARMHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
   test:
     name: Test server
     runs-on: [self-hosted, linux, large, noble, x64]
