chore(server): update tox.ini

--- a/server/tox.ini
+++ b/server/tox.ini
@@ -1,32 +1,34 @@
 [tox]
-no_package = true
 env_list = format, lint, unit
+no_package = true
+requires =
+    tox-uv>=1.25.0
 
 [vars]
-src_path = {tox_root}/hwapi
+src_path = {tox_root}/src
 tests_path = {tox_root}/tests
 scripts_path = {tox_root}/scripts
 all_path = {[vars]src_path} {[vars]scripts_path} {[vars]tests_path}
 
 [testenv]
-allowlist_externals = poetry
-commands_pre =
-    poetry install --no-root --sync
+runner = uv-venv-lock-runner
+dependency_groups =
+    dev
 
 [testenv:format]
 description = Apply coding style standards to code
 commands =
-    poetry run ruff format {[vars]all_path}
-    poetry run ruff check --fix {[vars]all_path}
+    ruff format {[vars]all_path}
+    ruff check --fix {[vars]all_path}
 
 [testenv:lint]
 description = Check code against coding style standards
 commands =
-    poetry run ruff check {[vars]all_path}
-    poetry run ruff format --check --diff {[vars]all_path}
-    poetry run mypy {[vars]all_path}
+    ruff check {[vars]all_path}
+    ruff format --check --diff {[vars]all_path}
+    mypy {[vars]all_path}
 
 [testenv:unit]
 description = Run unit tests
 commands =
-    poetry run pytest --cov={[vars]src_path} --cov-report=term --cov-report=xml:coverage/coverage.xml --doctest-modules {[vars]tests_path}
+    pytest --cov={[vars]src_path} --cov-report=term --cov-report=xml:coverage/coverage.xml --doctest-modules {[vars]tests_path}
