chore(server): add schema tox tests

--- a/server/tox.ini
+++ b/server/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-env_list = format, lint, unit
+env_list = format, lint, unit, schema
 no_package = true
 requires =
     tox-uv>=1.25.0
@@ -32,3 +32,13 @@ commands =
 description = Run unit tests
 commands =
     pytest --cov={[vars]src_path} --cov-report=term --cov-report=xml:coverage/coverage.xml --doctest-modules {[vars]tests_path}
+
+[testenv:schema]
+description = Generate OpenAPI schema
+commands =
+    python {[vars]scripts_path}/generate_openapi_schema.py --output schemas/openapi.yaml
+
+[testenv:check-schema]
+description = Check OpenAPI schema is up to date
+commands =
+    python {[vars]scripts_path}/generate_openapi_schema.py --diff schemas/openapi.yaml
