--- a/.github/workflows/tics.yml
+++ b/.github/workflows/tics.yml
@@ -8,7 +8,7 @@ on:
     - cron: "0 0 * * 0"
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+  cancel-in-progress: false
 jobs:
   analyze:
     name: TiCS Analysis
