chore(charm): add requests to integration dependencies

--- a/server/charm/pyproject.toml
+++ b/server/charm/pyproject.toml
@@ -13,7 +13,7 @@ lint = ["ruff", "codespell", "pyright"]
 # Dependencies of unit tests
 unit = ["coverage[toml]", "ops[testing]", "pytest"]
 # Dependencies of integration tests
-integration = ["jubilant", "pytest", "PyYAML"]
+integration = ["jubilant", "pytest", "PyYAML", "requests"]
 
 # Testing tools configuration
 [tool.coverage.run]
