chore(server): use ty for type checking
also updated code to comply with ty rules

--- a/server/tox.ini
+++ b/server/tox.ini
@@ -26,7 +26,7 @@ description = Check code against coding style standards
 commands =
     ruff check {[vars]all_path}
     ruff format --check --diff {[vars]all_path}
-    mypy {[vars]all_path}
+    ty check {[vars]all_path}
 
 [testenv:unit]
 description = Run unit tests
