chore(client): update tox.ini

--- a/client/tox.ini
+++ b/client/tox.ini
@@ -1,17 +1,25 @@
 [tox]
-envlist = py
-skipsdist = true
+env_list = format, lint, unit
 
-
-[testenv]
+[testenv:format]
+description = Apply coding standards to code
 deps =
-    black
     ruff
-    pytest
-    maturin
-commands_pre =
-    {envbindir}/maturin develop --features pybindings
 commands =
-    {envbindir}/python -m black --check pytests/
-    {envbindir}/python -m ruff check pytests/
-    {envbindir}/python -m pytest pytests/
+    ruff check --fix
+    ruff format
+
+[testenv:lint]
+description = Check code against coding stle standards
+deps =
+    ruff
+commands =
+    ruff check
+    ruff format --check
+
+[testenv:unit]
+description = Run unit tests
+deps =
+    pytest
+commands =
+    pytest pytests
